# parprog

./: CMakeLists.txt
headers/numerical_integration/: numerical_integration.hpp
lab1/: CMakeLists.txt
lab1/conv_dif_equation/src/: CMakeLists.txt  conv_dif_equation.cpp
lab1/headers/numerical_integration/: numerical_integration.hpp
lab1/pi_calculation/src/: CMakeLists.txt
lab1/src/numerical_integration/: numerical_integration.cpp
lab1/timing_communication/src/: CMakeLists.txt  time_communicators.cpp
lab2/: CMakeLists.txt
lab2/headers/: master.hpp  task.hpp  worker.hpp
lab2/prog/: CMakeLists.txt
lab2/prog/multi_threaded/: CMakeLists.txt  multi_threaded.cpp
lab2/prog/single_threaded/: CMakeLists.txt  single_threaded.cpp
pi_calculation/src/: CMakeLists.txt  pi_calc.cpp
src/: CMakeLists.txt
src/numerical_integration/: CMakeLists.txt
